--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,13 @@
 {
-    "name": "addi/module-payment",
+    "name": "addi/magento2-payment",
     "description": "",
     "type": "magento2-module",
     "license": "proprietary",
     "authors": [
         {
             "name": "Diego Velazquez",
-            "email": "dieovelazquez@wolfsellers.com"
+            "email": "diegovelazquez@wolfsellers.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {},
-    "autoload": {
-        "files": [
-            "registration.php"
-        ],
-        "psr-4": {
-            "Addi\\Payment\\": ""
-        }
-    }
+    "minimum-stability": "dev"
 }
